--- a/customerfeedback.html
+++ b/customerfeedback.html
@@ -156,6 +156,6 @@ function myFunction() {
   </div>
 
 
-  <img  id="img1" src="tourism2.jpg">
+  <img  id="img1" src="images/tourism2.jpg">
 </body>
 </html>
